[gd_scene load_steps=2 format=3 uid="uid://dif5ua57y8udh"]

[ext_resource type="Script" path="res://scripts/ui/save_slot_item.gd" id="1_wo6cm"]

[node name="SaveSlotItem" type="HBoxContainer"]
offset_right = 702.0
offset_bottom = 124.0
theme_override_constants/separation = 20
script = ExtResource("1_wo6cm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="MarginContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/LoadButton"]
self_modulate = Color(0.901961, 0.776471, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LoadButtonLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "[b][color=green]Slot 1[/color][/b]
Level: 1
Playtime: 00:12:20"
fit_content = true

[node name="DeleteButton" type="Button" parent="."]
modulate = Color(1, 0.150666, 0.0309665, 1)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " Delete "

[node name="NinePatchRect" type="NinePatchRect" parent="DeleteButton"]
self_modulate = Color(0.901961, 0.776471, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[connection signal="mouse_entered" from="MarginContainer/LoadButton" to="." method="play_button_hover_sfx"]
[connection signal="pressed" from="MarginContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="mouse_entered" from="DeleteButton" to="." method="play_button_hover_sfx"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
